Product container now have dynamic data working unless the questions section and add userData context for stop the frequentily request for the backend